[package]
edition = "2021"
name = "katana-benchmark"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"

[dependencies.katana-db]
git = "https://github.com/dojoengine/dojo.git"
tag = "v0.4.4"

[dependencies.papyrus_storage]
git = "https://github.com/starkware-libs/papyrus.git"
tag = "v0.2.0"

[dev-dependencies]
criterion = "0.5.1"
