[workspace]

members = [ "katana", "papyrus" ]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/kariy/katana-benchmark"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde_json = "1.0.111"

[workspace.dev-dependencies]
criterion = "0.5.1"
