[workspace]

members = [ "katana", "papyrus" ]

[package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
name = "katana-benchmark"
repository = "https://github.com/kariy/katana-benchmark"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[workspace.dependencies]
# katana = { path = "katana" }
papyrus = { path = "papyrus" }
serde_json = "1.0.111"

[dependencies]
# katana.workspace = true
papyrus.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
harness = false
name = "serde"
