[package]
edition = "2021"
name = "katana"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
blockifier = { git = "https://github.com/starkware-libs/blockifier", tag = "v0.4.0-rc9.2" }
cairo-lang-starknet = "2.4.0"
cairo-vm = "0.8.2"
katana-db = { git = "https://github.com/dojoengine/dojo.git", tag = "v0.4.4" }
katana-primitives = { git = "https://github.com/dojoengine/dojo.git", tag = "v0.4.4" }
serde_json = "1.0.111"

[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", rev = "e6e9c90" }

[patch.crates-io]
cairo-felt = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "262b7eb4b11ab165a2a936a5f914e78aa732d4a2" }
cairo-vm = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "262b7eb4b11ab165a2a936a5f914e78aa732d4a2" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "serde"
