[package]
edition = "2021"
name = "papyrus"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
blockifier = "0.5.0-dev.0"
cairo-lang-starknet = "=2.5.0-dev.1"
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus.git", rev = "bd333e" }
serde_json = "1.0.111"

[dependencies.papyrus_test_utils]
git = "https://github.com/starkware-libs/papyrus.git"
package = "test_utils"
rev = "bd333e"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "serde"
